--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,19 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainPage">
+        <activity android:name=".Activities.MainPage">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CoursesList" />
-        <activity android:name=".NameCourse" />
-        <activity android:name=".Organization" />
-        <activity android:name=".RiyadhActivity" />
-        <activity android:name=".DammamActivity" />
-        <activity android:name=".JeddahActivity"></activity>
+        <activity android:name=".Activities.CoursesList" />
+        <activity android:name=".Activities.NameCourse" />
+        <activity android:name=".Activities.Organization" />
+        <activity android:name=".Activities.CityActivity" />
     </application>
 
 </manifest>
